Fixed collapsed navbar

--- a/style.css
+++ b/style.css
@@ -29,10 +29,14 @@ color: grey;
   text-align: center;
 }
 .navbar {
-  height: 55px;
-  padding: 0.8rem;
+  height: 50px;
+  width: 100%;
+  padding: 0px;
 }
-
+#navbarResponsive {
+  background-color: #343A40;
+  width: 100%;
+}
 .masthead {
   height: 100vh;
   min-height: 500px;
@@ -44,6 +48,7 @@ color: grey;
 .para {
   font-family: 'Roboto', sans-serif;
 }
+
 #firstText {
   padding-top: 15px;
   display: block;
@@ -57,17 +62,11 @@ color: grey;
 text-align: center;
 padding-top: 20px;
 }
-#navbarResponsive {
-  background-color: #343A40;
-}
 @media (max-width: 992px) {
-  h1 {
-    font-size: 25px;
-  }
-  p {
-    font-size: 17px;
-  }
-  .fab {
-  font-size: 5px;
-  }
+ h1{
+   font-size: 28px;
+ }
+ p {
+   font-size: 20px;
+ }
 }
